Add lore modification commands and refactor existing logic
This commit introduces new lore modification commands: `clear`, `prepend`, and `replace`. The existing `append`, `set`, and `unset` commands are refactored for better consistency and readability. Additionally, helper methods for text deserialization and lore manipulation are optimized.